# HESS-HAMPATH-COMPLETE

./: CMakeLists.txt  LICENSE  README.md  hp.cpp
libhess/: CMakeLists.txt
libhess/include/hess/: hess.hh
libhess/src/: hess.cc
validator/: hc_check.c
